--- a/mos.yml
+++ b/mos.yml
@@ -12,10 +12,10 @@ filesystem:
 config_schema:
 
 libs:
-  - origin: https://github.com/mongoose-os-libs/arduino-compat
+  - location: https://github.com/mongoose-os-libs/arduino-compat
 
 modules:
-  - origin: https://github.com/markszabo/IRremoteESP8266
+  - location: https://github.com/markszabo/IRremoteESP8266
 
 tags:
   - js
