--- a/mos.yml
+++ b/mos.yml
@@ -21,7 +21,7 @@ tags:
   - js
   - c
 
-skeleton_version: 2017-05-18
+manifest_version: 2017-09-29
 
 #enable after fixed, and remove "defined" from IRsend.h:15
 cdefs:
